# city_sf_google_rocket_ride

./: .gitignore  README.md  SafeCross-SF-3min.pptx  capture_camera.py  safecross-edge-prompting-playbook.md  safecross-nfc-firmware-spec.md  web-hook-pipeline.pipe
safecross-edge/safecross-edge-controller/: README.md  pyproject.toml  requirements.txt
safecross-edge/safecross-edge-controller/config/: intersection.example.json  schema.json
safecross-edge/safecross-edge-controller/docs/: NTCIP_INTEGRATION.md  RS485_PROTOCOL.md
safecross-edge/safecross-edge-controller/scripts/: install.sh  logrotate.conf  safecross-edge.service  simulate_reader.py
safecross-edge/safecross-edge-controller/src/: classifier_filter.py  cloud_reporter.py  config_manager.py  event_logger.py  health_monitor.py  main.py  message_protocol.py  ntcip_client.py  ota_updater.py  rs485_listener.py  signal_state.py  timing_engine.py
safecross-edge/safecross-edge-controller/src/decision/: cooldown.py  timing.py
safecross-edge/safecross-edge-controller/src/device_management/: config_manager.py  heartbeat.py  ota.py
safecross-edge/safecross-edge-controller/src/logging_events/: cloud_forwarder.py  event_store.py  models.py
safecross-edge/safecross-edge-controller/src/utils/: crc.py
safecross-edge/safecross-edge-controller/tests/: conftest.py  test_classifier_filter.py  test_cooldown.py  test_event_store.py  test_message_protocol.py  test_ntcip_client.py  test_phase_manager.py  test_protocol.py  test_safety.py  test_signal_state.py  test_snmp_client.py  test_timing.py  test_timing_engine.py
(+74 files in other folders)
